# home-vision

./: .gitignore  .gitmodules  DOCUMENTATION.md  LICENSE  Makefile  README.md  capture3.py  capturebueno.py
dataset_generator/: create_dataset_home2024.ipynb  create_dataset_home2024_GrounDino.ipynb  create_dataset_home2024_GrounDino_YCB.ipynb  create_dataset_home2024_GrounDino_segmentation.ipynb  create_dataset_home2024_ycb.ipynb  ycb_png_maker.ipynb  ycb_resizer.ipynb
dataset_generator/utilities/: cut_largest_contour.py  resize_folder.py
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/pkgconfig/: vision.pc
docker/: Dockerfile.vision  Dockerfile.vision.cuda  Dockerfile.vision.l4t-35.4.1
docker/moondream/: Dockerfile.moondream.full  Dockerfile.moondream.ros  Dockerfile.ros
docker/scripts/: build.bash  run.bash
face_recognition/: CMakeLists.txt  package.xml
face_recognition/scripts/: FaceDetection.py
moondream_ws/src/moondream_action/: CMakeLists.txt  package.xml
moondream_ws/src/moondream_action/scripts/: count_server.py  countdown_server.py  example_client.py  moondream_actionserver.py  moondream_client.py
moondream_ws/src/moondream_msgs/: CMakeLists.txt  package.xml
requirements/: vision_requirements.txt
src/vision/scripts/: FaceDetection.py  PersonTracking.py
ws/: identities.json
ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
ws/src/bag_detector/: CMakeLists.txt  package.xml
ws/src/frida_vision_interfaces/: CMakeLists.txt  package.xml
ws/src/vision/: CMakeLists.txt  package.xml
ws/src/webcam_publisher/: package.xml  (+1 more)
(+131 files in other folders)
